# problems_solving

./: CMakeLists.txt
arrays_and_strings/: CMakeLists.txt
arrays_and_strings/1/: CMakeLists.txt  main.cpp  uniq_symbols.cpp  uniq_symbols.h
arrays_and_strings/2/: CMakeLists.txt  is_permutation.cpp  is_permutation.h  main.cpp
arrays_and_strings/3/: CMakeLists.txt  main.cpp  replacing.cpp  replacing.h
